syntax = "proto3";
package v1;

message Pet {
    string name = 1;
    string species = 2;
    string gender = 3;
    int32 age = 4;
    int64 dateOfBirth = 5;
}

message Species {
    string name = 1;
}

message ResponseStatistics {
    string species = 1;
    double averageAge = 2;
    double standardDeviation = 3;
}

message Pets {
    repeated Pet pets = 1;
}

message CreatePetRequest {
    Pet pet = 1;
}

message CreatePetReply {
    Pet pet = 1;
}

service CreatePetService {
    rpc CreatePet(CreatePetRequest) returns (CreatePetReply);
}

message GetStatisticsRequest {
    string petName = 1;
}

message GetStatisticsReply {
    ResponseStatistics statistics = 1;
}

service GetStatisticsService {
    rpc GetStatistics(GetStatisticsRequest) returns (GetStatisticsReply);
}

message GetPetsRequest {
    string filter = 1;
}

message GetPetsReply {
    repeated Pet pets = 1;
}

service GetPetsService {
    rpc GetPets(GetPetsRequest) returns (GetPetsReply);
}